force-app/main/default/Objects/Assessment_Result__c/Assessment_Result__c.object-meta.xml
<CustomObject>
    <description>Assessment outcomes can be used to measure skill level, account engagement, or other KPIs.</description>
    <label>Assessment Result</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Assessment Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>