force-app/main/default/Objects/Assessment_Result__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>What was the answer to the question</description>
    <inlineHelpText>What was the answer to the question</inlineHelpText>
    <label>Answer</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>