force-app/main/default/Objects/Assessment_Result__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <description>The assessment for which this result was captured</description>
    <inlineHelpText>The assessment for which this result was captured</inlineHelpText>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Assessment Results</relationshipLabel>
    <relationshipName>Assessment_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>