force-app/main/default/Objects/Assessment_Result__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if answer provided was correct</description>
    <inlineHelpText>Indicates if answer provided was correct</inlineHelpText>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>