force-app/main/default/objects/Assessment_Result__c/fields/Penny_Coaching_Note__c.field-meta.xml
<CustomField>
    <fullName>Penny_Coaching_Note__c</fullName>
    <description>Per-question coaching note written by Penny via Gemini after ScoreAssessment fires. For Multiple-Choice: Penny explains why the wrong answer was wrong, what the correct answer teaches. For Open-Ended: Penny provides qualitative rubric-based feedback.</description>
    <inlineHelpText>Per-question coaching note written by Penny via Gemini after ScoreAssessment fires. For Multiple-Choice: Penny explains why the wrong answer was wrong, what the correct answer teaches. For Open-Ended: Penny provides qualitative rubric-based feedback.</inlineHelpText>
    <label>Penny Coaching Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>