force-app/main/default/Objects/Assessment_Result__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>What was asked</description>
    <inlineHelpText>What was asked</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>