force-app/main/default/Objects/Assessment_Result__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score for this result</description>
    <formula>IF(Is_Correct__c, Weight__c * 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score for this result</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>