force-app/main/default/objects/Assessment_Result__c/fields/Skill_Question__c.field-meta.xml
<CustomField>
    <fullName>Skill_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Adds FK traceability from a result back to the source question bank.  This field fixes that. Enables Penny to retrieve the correct answer explanation when coaching an incorrect response.</description>
    <inlineHelpText>Adds FK traceability from a result back to the source question bank.  This field fixes that. Enables Penny to retrieve the correct answer explanation when coaching an incorrect response.</inlineHelpText>
    <label>Skill Question</label>
    <referenceTo>SkillQuestion__c</referenceTo>
    <relationshipLabel>Assessment Results</relationshipLabel>
    <relationshipName>Assessment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>