force-app/main/default/objects/Assessment_Result__c/fields/Skill_Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>Skill_Question_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records exactly which answer option the learner selected. Combined with SkillQuestionAnswer__c.IsCorrect__c, Penny knows not only that a learner got a question wrong but exactly which wrong answer they chose. (THIS BREAKS DATA MODEL)</description>
    <inlineHelpText>Records exactly which answer option the learner selected. Combined with SkillQuestionAnswer__c.IsCorrect__c, Penny knows not only that a learner got a question wrong but exactly which wrong answer they chose.</inlineHelpText>
    <label>Skill Question Answer</label>
    <referenceTo>SkillQuestionAnswer__c</referenceTo>
    <relationshipLabel>Assessment Results</relationshipLabel>
    <relationshipName>Assessment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>