force-app/main/default/Objects/Assessment_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Score__c</columns>
    <columns>Weight__c</columns>
    <columns>Is_Correct__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>